--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -77,7 +77,7 @@ html {
             color: $color-black;
             font-size: 1.5rem;
             font-weight: 500;
-            i {
+            em {
                 font-size: 1.35rem;
             }
         }
@@ -96,10 +96,16 @@ html {
     }
     label, input {
         font-size: 2.25rem;
+        @include mobile {
+            font-size: 1.5rem;
+        }
     }
-    i {
+    em {
         color: $color-white;
         font-size: 3rem;
+        @include mobile {
+            font-size: 1.5rem;
+        }
     }
 }
 
