--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -19,11 +19,10 @@
     border-radius: 5px;
     padding: 35px;
     @include mobile {
-        height: 100vh;
-        width: 100vw;
-        left: 0;
-        margin-left: 0;
-        margin-top: 0;
+        height: fit-content;
+        min-height: 100vh;
+        width: 100%;
+        margin: 0 0;
         border-radius: 0;
         padding: 20px;
     }
@@ -37,12 +36,18 @@
         border: none;
         &:last-child {
             @include btn-static;
+            @include mobile {
+                position: relative;
+                left: 50%;
+                margin-left: -85px;
+                height: 35px;
+            }
             &:hover, &:focus {
                 @include btn-dynamic
             }
         }
     }
-    #message {
+    #Your-message {
         height: 170px;
         margin-bottom: 25px;
         overflow: scroll;
