--- a/sass/layout/_picGrid.scss
+++ b/sass/layout/_picGrid.scss
@@ -40,7 +40,7 @@
             p:nth-child(2){
                 margin-right: 15px;
             }
-            i {
+            em {
                 cursor: pointer;
             }
         }
