--- a/sass/layout/_profile.scss
+++ b/sass/layout/_profile.scss
@@ -50,8 +50,9 @@
         padding-right: 60px;
         @include mobile {
             position: fixed;
+            z-index: 1;
             bottom: 40px; left: 50%;
-            width: 170px; height: 35px;
+            width: fit-content; height: 35px;
             margin-left: -85px;
         }
     }
