--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,7 @@
 .banner {
     display: flex;
     justify-content: space-between;
+    margin-top: 50px;
     @include mobile {
         justify-content: center;
         flex-direction: column;
