--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,12 +1,11 @@
 .appear-when-scroll {
     position: sticky;
     top : 0;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     height: 45px;
     background-color: $color-white;
-    opacity: 0;
     transition: 200ms;
     &-link {
         text-align: center;
